--- a/index.html
+++ b/index.html
@@ -41,16 +41,16 @@
                <!-- Add form element--> 
                <form>
                    <label for="name">Enter full name:</label>
-                   <input type="text" placeholder="Your Name" name="name" id="name" />
+                   <input type="text" placeholder="Your Name" name="name" id="name" class="form-input" />
                    
                    <label for="emil">Enter email address:</label>
-                   <input type="email" placeholder="Email Address" name="email" id="email" />
+                   <input type="email" placeholder="Email Address" name="email" id="email" class="form-input" />
                    
                    <label for="phone">Enter a telephone number:</label>
-                   <input type="tel" placeholder="Phone Number" name="phone" id="phone" />
+                   <input type="tel" placeholder="Phone Number" name="phone" id="phone" class="form-input" />
                    <p>
                        Have you worked out with a trainer before?
-                       <input typer="radio" name="trainer-confrim" id="trainer-yes" />
+                       <input type="radio" name="trainer-confrim" id="trainer-yes" />
                        <label for="trainer-yes">Yes</label>
                        <input type="radio" name="trainer-confrim" id="trainer-no" />
                        <label for="trainer-no">No</label>
