--- a/index.html
+++ b/index.html
@@ -112,8 +112,10 @@
         </section>
 
         <!--"meet the trainers" section-->
-        <section>
-            <h2>Meet The Trainers</h2>
+        <section id="your-trainers" class="trainers">
+            <h2 class="section-title primary-border">
+                Meet The Trainers 
+            </h2>
         </section>
 
         <!--"reach out" section-->
