--- a/index.html
+++ b/index.html
@@ -158,14 +158,29 @@
             <h2>Reach Out</h2>
             <div class="contact=info">
                 <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2913.3611717134763!2d-87.90231738459296!3d43.09692417914432!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88051eddf3d2eb79%3A0x2236f4ebf60fb749!2s4404%20N%20Wilson%20Dr%2C%20Shorewood%2C%20WI%2053211!5e0!3m2!1sen!2sus!4v1606848628258!5m2!1sen!2sus" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"
-                frameborder="0"
-                height="400"
-                width="400"
-                style="border:0"
-                allowfullscreen
-                >    
-            </iframe>"
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2913.3611717134763!2d-87.90231738459296!3d43.09692417914432!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88051eddf3d2eb79%3A0x2236f4ebf60fb749!2s4404%20N%20Wilson%20Dr%2C%20Shorewood%2C%20WI%2053211!5e0!3m2!1sen!2sus!4v1606848628258!5m2!1sen!2sus" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"
+                    frameborder="0"
+                    height="400"
+                    width="400"
+                    style="border:0"
+                    allowfullscreen
+                    >    
+                </iframe>
+                <div>
+                    <h3>Run Buddy</h3>
+                    <p>
+                        Any questions or concerns before signing up?
+                        <br />
+                        Let us know and we'll be happy to talk to you!
+                    </p>
+                    <address>
+                        55 Main Street <br />
+                        Some Town, Ca <br />
+                        12345<br />
+                        P: 555.RUN.BUDZ (555.786.2893)<br />
+                        E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
+                    </address>
+                </div>
             </div>
         </section>
 
